Updated remaining styling to REM where applicable

--- a/src/components/Changelog/Changelog.module.scss
+++ b/src/components/Changelog/Changelog.module.scss
@@ -24,7 +24,7 @@
     border-radius: 999px;
     padding: var(--spacing-1) var(--spacing-2);
     font-weight: bold;
-    letter-spacing: 0.75px;
+    letter-spacing: 0.054rem;
     margin-right: var(--spacing-3);
   }
 
