--- a/src/components/Badges/elements/BadgeEditor/BadgeEditor.module.scss
+++ b/src/components/Badges/elements/BadgeEditor/BadgeEditor.module.scss
@@ -3,6 +3,9 @@
 .button {
   background-color: transparent !important;
   color: var(--contrast) !important;
+  padding: 'var(--spacing-1)';
+  margin: 0;
+  box-shadow: none;
 
   @media (max-width: $screen-sm) {
     display: none !important;
