--- a/src/components/Tracker/elements/Evolve/Evolve.module.scss
+++ b/src/components/Tracker/elements/Evolve/Evolve.module.scss
@@ -1,10 +1,12 @@
+@import 'styles/variables';
+
 .button {
   border-top-left-radius: unset !important;
   border-bottom-left-radius: unset !important;
   margin-right: 0 !important;
 
-  @media (max-width: 550px) {
-    padding: 0.5em !important;
+  @media (max-width: $screen-sm) {
+    padding: var(--spacing-2) !important;
   }
 }
 
