--- a/src/components/UpdateSW/UpdateSW.module.scss
+++ b/src/components/UpdateSW/UpdateSW.module.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  gap: 5px;
+  gap: var(--spacing-1);
   position: fixed;
-  bottom: 20px;
+  bottom: 1.429rem;
   left: 50%;
-  padding: 10px;
+  padding: var(--spacing-3);
   transform: translate(-50%, 0);
   z-index: 10060;
   border-radius: 4px;
