Small bug fixes, changelog updates, initial changes for localization

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -132,6 +132,10 @@
     font-size: var(--font-size-1);
     text-align: left;
 
+    &.hide {
+      display: none;
+    }
+
     @media (max-width: 90rem) {
       display: none;
     }
