Added custom game templates

--- a/src/components/AddGame/AddGame.module.scss
+++ b/src/components/AddGame/AddGame.module.scss
@@ -7,3 +7,10 @@
     color: var(--contrast) !important;
   }
 }
+
+.template {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: var(--spacing-2);
+  margin-top: var(--spacing-4);
+}
