bug fix for mega evolutions

--- a/src/components/Tracker/elements/Detail/Detail.module.scss
+++ b/src/components/Tracker/elements/Detail/Detail.module.scss
@@ -67,6 +67,10 @@
   .natureContainer {
     display: flex;
     gap: var(--spacing-1);
+
+    input {
+      box-sizing: border-box;
+    }
   }
 
   .dropdown {
