Screen size fix for downloaded images

--- a/src/components/Pokestats/elements/Summary/Summary.module.scss
+++ b/src/components/Pokestats/elements/Summary/Summary.module.scss
@@ -47,6 +47,7 @@
 
   .offscreen {
     position: absolute;
+    width: $screen-lg;
     max-width: $screen-lg;
     bottom: -100000px;
     right: -100000px;
