--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -64,6 +64,14 @@
     cursor: pointer;
   }
 
+  .sidebar > div {
+    cursor: pointer;
+
+    &:hover {
+      background: rgba(255, 255, 255, 0.08) !important;
+    }
+  }
+
   .exclamation {
     display: grid;
     place-items: center;
