Updated dependencies, removed react-hook-form, use normal state to update calculator

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,5 @@
-@use 'styles/mixins';
-@import 'styles/variables';
+@use 'src/assets/styles/mixins';
+@import 'src/assets/styles/variables';
 
 .app {
   height: fit-content;
