Swap functionality, new look for tracker encounters, style fixes

--- a/src/assets/styles/Selector.module.scss
+++ b/src/assets/styles/Selector.module.scss
@@ -17,6 +17,10 @@
       border-radius: 4px;
       cursor: pointer;
 
+      &.dupe {
+        filter: grayscale(100%);
+      }
+
       &:hover {
         transform: scale(1.01);
       }
