--- a/src/components/Tracker/elements/Swap/Swap.module.scss
+++ b/src/components/Tracker/elements/Swap/Swap.module.scss
@@ -1,3 +1,8 @@
 .button {
   margin-right: 0 !important;
+
+  > i {
+    margin-left: var(--spacing-2) !important;
+    margin-right: 0 !important;
+  }
 }
