Added scroller list and pokemon stats to badge details, changed some color schemes and localizations

--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -8,6 +8,10 @@
   .search {
     flex: 1;
     width: 100%;
+
+    > input::-webkit-input-placeholder {
+      color: #3f3f3fde;
+    }
   }
 
   .popup {
