--- a/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
+++ b/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
@@ -1,3 +1,5 @@
+@import 'src/assets/styles/variables';
+
 .title {
   font-weight: bold;
   font-size: var(--font-size-6);
@@ -75,6 +77,35 @@
 
         .value {
           font-size: var(--font-size-3);
+        }
+      }
+    }
+
+    .extendedDetails {
+      display: flex;
+      gap: var(--spacing-2);
+
+      @media (max-width: $screen-sm) {
+        flex-flow: column nowrap;
+      }
+
+      > div {
+        flex: 1;
+      }
+
+      .stats {
+        display: grid;
+        grid-template-columns: var(--spacing-6) var(--spacing-6) minmax(0, 1fr);
+        flex-flow: column nowrap;
+        gap: var(--spacing-2);
+        font-size: var(--font-size-3);
+        font-weight: bold;
+        .statLabel {
+          color: var(--contrast);
+        }
+
+        .statBar {
+          height: var(--spacing-4);
         }
       }
     }
