Replaced pokemon images with pkmimage component, added shiny functionality

--- a/src/components/Tracker/elements/Detail/Detail.module.scss
+++ b/src/components/Tracker/elements/Detail/Detail.module.scss
@@ -96,6 +96,10 @@
     }
   }
 
+  :global(.ui.checkbox) > label {
+    color: var(--contrast) !important;
+  }
+
   .textarea {
     width: 100%;
     resize: none;
