--- a/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
+++ b/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
@@ -79,6 +79,12 @@
         gap: var(--spacing-1);
         color: var(--contrast);
 
+        .item {
+          display: flex;
+          align-items: center;
+          padding-left: var(--spacing-2);
+        }
+
         > span {
           font-size: var(--font-size-2);
         }
