Added nature button to tracker, various style fixes for dark mode, changelog updates, initial inclusion of prisma

--- a/src/assets/styles/Dropdown.module.scss
+++ b/src/assets/styles/Dropdown.module.scss
@@ -9,6 +9,10 @@
     border-color: var(--contrast) !important;
   }
 
+  > div {
+    color: var(--contrast) !important;
+  }
+
   > i {
     top: 0 !important;
   }
