--- a/src/components/Tracker/elements/Detail/Detail.module.scss
+++ b/src/components/Tracker/elements/Detail/Detail.module.scss
@@ -54,6 +54,10 @@
 
   details[open] summary ~ * {
     animation: sweep 0.5s ease-in-out;
+
+    @media (prefers-reduced-motion) {
+      animation: none;
+    }
   }
 
   .expandable {
