--- a/src/components/Calculator/elements/Stats/Stats.module.scss
+++ b/src/components/Calculator/elements/Stats/Stats.module.scss
@@ -21,6 +21,10 @@
 
   details[open] summary ~ * {
     animation: sweep 0.5s ease-in-out;
+
+    @media (prefers-reduced-motion) {
+      animation: none;
+    }
   }
 
   .fieldset {
