--- a/src/components/Tracker/elements/Nickname/Nickname.module.scss
+++ b/src/components/Tracker/elements/Nickname/Nickname.module.scss
@@ -6,10 +6,14 @@
 
   > input {
     background-color: transparent !important;
-    border-color: var(--contrast) !important;
     color: var(--contrast) !important;
+    border-color: var(--contrast-border) !important;
     border-top-right-radius: unset !important;
     border-bottom-right-radius: unset !important;
+
+    &::-webkit-input-placeholder {
+      color: var(--placeholder) !important;
+    }
   }
 
   > button {
