--- a/src/components/Tracker/elements/Swap/Swap.module.scss
+++ b/src/components/Tracker/elements/Swap/Swap.module.scss
@@ -1,10 +1,23 @@
+@import 'src/assets/styles/variables';
+
 .button {
   margin-right: 0 !important;
-  padding-left: var(--spacing-2) !important;
-  padding-right: var(--spacing-2) !important;
+  background-color: transparent !important;
+  color: var(--contrast) !important;
+  border: 1px var(--contrast) solid !important;
+  padding: var(--spacing-2) !important;
+
+  &:hover {
+    background: var(--contrast) !important;
+    color: var(--bgprimary) !important;
+  }
 
   > i {
     margin-left: var(--spacing-2) !important;
     margin-right: 0 !important;
+
+    @media (max-width: $screen-xs) {
+      display: none;
+    }
   }
 }
