Test fixes, style fixes, added previous status functionality to swapping functionality

--- a/src/components/Warning/Warning.module.scss
+++ b/src/components/Warning/Warning.module.scss
@@ -7,6 +7,7 @@
   bottom: var(--spacing-4);
   right: var(--spacing-4);
   background-color: var(--contrast);
+  color: var(--card);
   border-radius: 4px;
   padding: var(--spacing-2);
 }
