--- a/src/assets/styles/Dropdown.module.scss
+++ b/src/assets/styles/Dropdown.module.scss
@@ -19,6 +19,7 @@
 
   > input {
     color: var(--contrast) !important;
+    max-width: calc(100% - var(--spacing-8)) !important;
 
     &:hover {
       border-color: var(--contrast) !important;
