Added soothe bell, fixed crash with forbidden items, switched localization for calculator

--- a/src/assets/styles/item.css
+++ b/src/assets/styles/item.css
@@ -2109,3 +2109,8 @@
   height: 28px;
   background-position: -589px -802px;
 }
+.pkitem-soothe-bell {
+  width: 15px;
+  height: 20px;
+  background-position: -104px -178px;
+}
