--- a/src/components/Tracker/elements/Detail/Detail.module.scss
+++ b/src/components/Tracker/elements/Detail/Detail.module.scss
@@ -1,3 +1,5 @@
+@import 'src/assets/styles/variables';
+
 .content {
   display: flex !important;
   flex-flow: column nowrap;
@@ -19,6 +21,64 @@
         height: 5.714rem;
         width: 7.143rem;
         align-self: center;
+      }
+    }
+  }
+
+  .soulink {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: var(--spacing-2);
+
+    .selector {
+      display: flex;
+      flex-flow: column nowrap;
+      position: relative;
+      gap: var(--spacing-2);
+      padding-left: var(--spacing-3);
+      height: auto;
+      width: calc(100% - var(--spacing-3));
+      align-items: flex-start;
+      color: var(--contrast);
+      box-sizing: unset;
+      border-radius: 4px;
+      border: 1px solid var(--contrast-border);
+      cursor: pointer;
+
+      .deleteSoullink {
+        position: absolute;
+        top: var(--spacing-3);
+        right: var(--spacing-3);
+      }
+
+      &:hover {
+        border-color: var(--contrast);
+      }
+
+      @media (max-width: $screen-sm) {
+        font-size: var(--font-size-2);
+      }
+
+      > .image {
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        width: 4.8rem;
+        height: 3.5rem;
+      }
+
+      .placeholder {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--placeholder);
+        margin: var(--spacing-2) auto;
+        height: var(--spacing-9);
+      }
+
+      .soulLinkName {
+        margin-top: auto;
+        margin-bottom: var(--spacing-2);
       }
     }
   }
