--- a/src/components/Pokestats/Pokestats.module.scss
+++ b/src/components/Pokestats/Pokestats.module.scss
@@ -123,6 +123,12 @@
           width: 100%;
         }
 
+        .details {
+          position: absolute;
+          right: var(--spacing-1);
+          top: var(--spacing-2);
+        }
+
         .lineOne {
           position: absolute;
           top: 70%;
