Updated look of badges scroll bar to make it easier to click and see

--- a/src/components/Badges/Badges.module.scss
+++ b/src/components/Badges/Badges.module.scss
@@ -5,6 +5,11 @@
   position: relative;
   overflow-y: auto;
 
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.55) !important;
+    height: 12px;
+  }
+
   .badge {
     display: flex;
     align-items: center;
