fix: route 4 encounters for rby, outline style for active searchbar

--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -9,6 +9,11 @@
     flex: 1;
     width: 100%;
 
+    &.active > input {
+      border-color: var(--badge);
+      border-width: 3px;
+    }
+
     > input::-webkit-input-placeholder {
       color: #3f3f3fde;
     }
