--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -1,5 +1,25 @@
 @import 'src/assets/styles/variables';
 
+.beta {
+  display: flex;
+  padding: var(--spacing-2);
+  width: fit-content;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 34%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  font-weight: bold;
+  font-size: var(--font-size-5);
+  border-radius: 4px;
+  align-self: center;
+}
+
+.warning {
+  font-size: var(--font-size-4);
+}
+
 .button {
   background-color: transparent !important;
   color: var(--contrast) !important;
