feat: Added inputs to eviv in pokemon details, added error boundary specific to calcs, encounter fixes

--- a/src/components/Calculator/elements/Range/Range.module.scss
+++ b/src/components/Calculator/elements/Range/Range.module.scss
@@ -51,4 +51,6 @@ input[type='range'].input {
   padding: var(--spacing-0) var(--spacing-1);
   text-align: center;
   user-select: none;
+  background-color: transparent;
+  color: var(--contrast);
 }
