feat: added delete account feature, fixed encounters, style adjustments, removed old social and download links

--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -64,4 +64,16 @@
     gap: var(--spacing-2);
     width: fit-content;
   }
+
+  .confirmContainer {
+    display: flex;
+    gap: var(--spacing-3);
+    align-items: center;
+  }
+
+  .delete {
+    display: flex;
+    gap: var(--spacing-2);
+    width: fit-content;
+  }
 }
